--- a/css/screen.css
+++ b/css/screen.css
@@ -689,13 +689,13 @@ footer .button {
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
-  border-right: 2px solid var(--border-color-light);
 }
 
 .gh-count {
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
+  border-left: 2px solid var(--border-color-light);
 }
 
 .gh-logo,
